--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -1,11 +1,18 @@
 server {
+
   listen 80 default_server;
-  root /usr/share/nginx/html/;
-  index index.html index.htm;
-  include /etc/nginx/mime.types;
 
   location / {
+    root /usr/share/nginx/html/;
+    index index.html index.htm;
+    try_files $uri $uri/ /index.html;
+    include /etc/nginx/mime.types;
     proxy_pass  http://localhost:3000;
     # try_files $uri $uri/ /index.html;
+  }
+  error_page    500 502 503 504   /50x.html;
+
+  location = /50x.html {
+    root  /user/share/nginx/html;
   }
 }
