--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -1,4 +1,6 @@
-Django==2.0.1
+Django==3.2
+gunicorn==20.1.0
 djangorestframework==3.7.7
-psycopg2==2.9.5
+psycopg2-binary
 pytz==2017.3
+dj-database-url
